# NNS-python

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  changed_files.json  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  inspect-r-api-update.yml  native-backend-ci.yml  parity-autofix.yml  release.yml  sync-from-nns-core.yml
_sync_source/pyNNS-core-backed-r13/: CMakeLists.txt  README.md  pyproject.toml
_sync_source/pyNNS-core-backed-r13/docs/: api_status.md  benchmarks.md  conventions.md  original_tests_adoption.md  parity_results.md  parity_status.md
_sync_source/pyNNS-core-backed-r13/original_tests/: testthat.R
_sync_source/pyNNS-core-backed-r13/scripts/: regenerate_r_cache.py
_sync_source/pyNNS-core-backed-r13/tests/: _r.py  conftest.py
docs/: api_reference.md  api_status.md  benchmarks.md  conventions.md  index.md  install.md  native_original_src_coverage.md  original_tests_adoption.md  parity.md  parity_autofix.md  parity_plan.md  parity_results.md  parity_status.md  plot_parity_policy.md  quick_start.md  r13_cache_regeneration.md  release_notes.md  releasing.md  sync_contract.md  sync_status.md
docs/examples/: README.md  classification.py  dependence.py  distributions_anova.py  forecasting.py  nowcast_panel.py  partial_moments.py  regression.py
docs/examples/notebooks/: 01_partial_moments_risk_workflow.ipynb  02_regression_classification_workflow.ipynb  03_forecasting_nowcast_workflow.ipynb  04_distribution_dominance_simulation_workflow.ipynb  05_boston_housing_regression_workflow.ipynb
docs/stylesheets/: cosmo.css
docs/vignettes/: 00_overview.md  01_partial_moments.md  02_descriptive_distributional_tools.md  03_dependence_nonlinear_association.md  04_normalization_rescaling.md  05_hypothesis_anova_stochastic_superiority.md  06_regression_boosting_stacking_causality.md  07_time_series_forecasting.md  08_simulation_bootstrap_riskneutral.md  09_portfolio_stochastic_dominance.md  README.md
examples/: run_all_vignettes.py
examples/vignettes/: dependence_nonlinear_association.py  descriptive_distributional_tools.py  hypothesis_anova_stochastic_superiority.py  normalization_rescaling.py  overview.py  partial_moments.py  portfolio_stochastic_dominance.py  regression_boosting_stacking_causality.py  simulation_bootstrap_riskneutral.py  time_series_forecasting.py
gist_tides/: README.md  tides_nns.py
gists/tides/: README.md  tides_nns.py
original_tests/testthat/: test_ANOVA.R  test_Copula.R  test_Partition_Map.R
scripts/: benchmark_realistic_sd_r.R  check_release_provenance.py  check_version_consistency.py  generate_api_reference.py  inspect_r_api_update.py  install_local_r_nns.py  plan_r_api_parity_review.py  regenerate_r_cache.py  run_live_r_parity_for_changed_api.py  sync_nns_core_snapshot.py  sync_r_nns_snapshot.py  update_benchmarks_doc.py  verify_release_provenance.py
src/nns/: __init__.py  _helpers.py  _native.py  _nnscore.pyi  _nnscore_bindings.cpp  anova.py  arma.py  boost.py  causation.py  cdf.py  central_tendencies.py  classical.py  co_moments.py  copula.py  core.py  dependence.py  diff.py  distance.py  mc.py  meboot.py  multivariate_regression.py  norm.py  nowcast.py  part.py  pm_matrix.py  regression.py  seasonality.py  stack.py  stochastic_dominance.py  stochastic_superiority.py  var.py
src/pynns/: co_moments.py  core.py  multivariate_regression.py  pm_matrix.py  regression.py  stochastic_dominance.py  stochastic_superiority.py  var.py
sync/: last_live_r_parity_report.md  last_r_api_inspection.md  last_r_api_plan.json  nns_source.json  r_api_map.json
tests/: _r.py  conftest.py
tests/benchmarks/: _finance_fixture.py  _r_baseline.json  test_finance_partial_moment_workflows.py  test_finance_sd_rolling.py  test_lpm.py  test_stochastic_dominance_realistic.py
tests/docs/: test_vignette_examples.py
tests/invariants/: test_anova.py  test_arma.py  test_boost.py  test_causation.py  test_cdf.py  test_classical.py  test_co_moments.py  test_copula.py  test_core.py  test_deferred_paths.py  test_dependence.py  test_diff.py  test_distance.py  test_export_surface.py  test_mc.py  test_meboot.py  test_multivariate_regression.py  test_native_original_src_coverage.py  test_norm.py  test_nowcast.py  test_part.py  test_pm_matrix.py  test_regression.py  test_regression_helpers.py  test_sampling.py  test_sd_cluster.py  test_seasonality.py  test_stack.py  test_stochastic_dominance.py  test_stochastic_dominance_prefix_pairs.py  test_stochastic_superiority.py  test_var.py
tests/parity/: _original.py  test_anova.py  test_arma.py  test_boost.py  test_categorical.py  test_causation.py  test_cdf.py  test_classical.py  test_co_moments.py  test_copula.py  test_core.py  test_dependence.py  test_diff.py  test_distance.py  test_mc.py  test_meboot.py  test_multivariate_regression.py  test_norm.py  test_original_anova.py  test_original_dependence.py  test_original_partial_moments.py  test_original_partition.py  test_original_stochastic.py  test_part.py  test_pm_matrix.py  test_practical_examples.py  test_public_wrappers.py  test_r13_smoke.py  test_regression.py  test_regression_helpers.py  test_sd_cluster.py  test_seasonality.py  test_stack.py  test_stochastic_dominance.py  test_stochastic_superiority.py  test_var.py
tests/plotting/: conftest.py  test_compute_plot_flag.py  test_lazy_import.py  test_palette.py  test_plots.py
tests/property/: test_anova.py  test_arma.py  test_boost.py  test_causation.py  test_cdf.py  test_classical.py  test_co_moments.py  test_copula.py  test_core.py  test_dependence.py  test_diff.py  test_distance.py  test_mc.py  test_meboot.py  test_multivariate_regression.py  test_norm.py  test_part.py  test_pm_matrix.py  test_regression.py  test_regression_helpers.py  test_sd_cluster.py  test_seasonality.py  test_stack.py  test_stochastic_dominance.py  test_stochastic_superiority.py
tests/tools/: test_plan_r_api_parity_review.py  test_release_provenance.py  test_sync_manifests.py  test_verify_provenance_offline.py  test_version_sync.py
tools/NNS/: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  README.md  _pkgdown.yml
(+275 files in other folders)
