[project]
name = "ovvo-nns"
version = "1.0.0a0"
description = "Python port of nonlinear nonparametric statistics from R NNS"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-only"
authors = [
    { name = "Fred Viole", email = "ovvo.open.source@gmail.com" },
    { name = "Roberto Spadim" },
    { name = "Rasheed Khoshnaw" },
]
maintainers = [
    { name = "Fred Viole", email = "ovvo.open.source@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
keywords = [
    "statistics",
    "nonparametric",
    "partial moments",
    "regression",
    "forecasting",
    "nns",
]
urls = { "Homepage" = "https://github.com/OVVO-Financial/NNS-python", "Repository" = "https://github.com/OVVO-Financial/NNS-python", "Issues" = "https://github.com/OVVO-Financial/NNS-python/issues", "Source" = "https://github.com/OVVO-Financial/NNS-python", "Project" = "https://github.com/OVVO-Financial/NNS-python" }
dependencies = [
    "numpy",
    "scipy",
]

[dependency-groups]
dev = [
    "hypothesis",
    "mypy",
    "pytest",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-xdist>=3.8.0",
    "ruff",
]

[build-system]
requires = ["scikit-build-core", "nanobind"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["src/nns"]
sdist.include = [
    "/CMakeLists.txt",
    "/LICENSE",
    "/README.md",
    "/docs",
    "/sync",
    "/extern/NNS-core",
    "/original_tests",
    "/scripts",
    "/tools/NNS",
    "/tools/NNS_13.0.tar.gz",
    "/tests/_r_cache.json",
    "/tests/fixtures/original_tests_expected.json",
    "/pyproject.toml",
    "/src",
]

[tool.pytest.ini_options]
addopts = "-ra -m 'not benchmark' --benchmark-disable -n 4"
pythonpath = ["tests"]
testpaths = ["tests"]
markers = [
    "benchmark: performance benchmarks excluded from the default test run",
    "parity: tests comparing nns behavior to the reference R NNS package",
    "practical: end-to-end practical example parity checks against installed R NNS",
    "invariant: tests for mathematical or API invariants",
    "property: property-based tests",
    "stochastic: stochastic structural/statistical tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "*.ipynb",
    "extern/NNS-core",
    "upstream",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF", "TID"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"subprocess" = { msg = "Do not call subprocess from nns implementation code. Keep R parity calls in tests/_r.py." }
"rpy2" = { msg = "Do not use rpy2 from nns implementation code. Keep R parity calls outside the package." }

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["TID251"]
"scripts/regenerate_r_cache.py" = ["TID251"]
"scripts/install_local_r_nns.py" = ["TID251"]
"scripts/run_live_r_parity_for_changed_api.py" = ["TID251"]
"scripts/inspect_r_api_update.py" = ["TID251"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/nns", "tests"]
mypy_path = ["tests"]

[tool.cibuildwheel]
# Native (C++17 / nanobind) extension: build CPython wheels across 3.11-3.13.
# scikit-build-core fetches cmake/ninja as build deps, so no system CMake needed.
build = "cp311-* cp312-* cp313-*"
skip = ["pp*", "*_i686", "*-win32", "*-musllinux_i686"]
build-frontend = "build"
# Smoke-test every built wheel: the native extension imports and computes.
test-command = 'python -c "import nns, nns._nnscore as c; print(c.lpm(2.0, 0.0, [-2.0, -1.0, 0.5, 3.0]))"'

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
